# WeChat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  README.md  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  rc.qrc
Client/: CMakeLists.txt  README.md  rc.qrc
Client/include/: AddFriendDialog.h  Common.h  DragWidgetFilter.h  ForgetDialog.h  HttpManager.h  LoadingDialog.h  LoginDialog.h  RegisterDialog.h  Singleton.hpp  TcpClient.h  Tool.h  mainwindow.h
Client/include/ChatWidget/: NavigationBar.h  SiderBarWidget.h
Client/include/custom/: ChatBubble.h  ContactTreeItem.h  ContactTreeWidget.h  ContactWidget.h  GroupTreeItem.h  LineEdit.h  MessageItem.h  MsgListWidget.h  NotifyButton.h  PasswdLineEdit.h  SearchLineEdit.h  SearchListwidget.h  SessionItem.h  SessionListWidget.h  TimerButton.h
Client/src/: AddFriendDialog.cpp  DragWidgetFilter.cpp  ForgetDialog.cpp  HttpManager.cpp  LoginDialog.cpp  RegisterDialog.cpp  TcpClient.cpp  main.cpp  mainwindow.cpp
Client/src/ChatWidget/: NavigationBar.cpp  SiderBarWidget.cpp
Client/src/custom/: ChatBubble.cpp  ContactTreeItem.cpp  ContactTreeWidget.cpp  ContactWidget.cpp  GroupTreeItem.cpp  LineEdit.cpp  MessageItem.cpp  MsgListWidget.cpp  NotifyButton.cpp  PasswdLineEdit.cpp  SearchLineEdit.cpp  SearchListwidget.cpp  SessionItem.cpp  SessionListWidget.cpp  TimerButton.cpp
Client/style/: styleSheet.qss
Client/style/themes/: dark.qss  default.qss
Client/ui/: AddFriendDialog.ui  ForgetDialog.ui  LoginDialog.ui  RegisterDialog.ui  mainwindow.ui
Server/: CMakeLists.txt  README.md  message.h  message.proto
Server/ChatServer/: CMakeLists.txt
Server/ChatServer/include/: ChatServer.h  ConfigManager.h  RpcService.h  net_common.h  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp
Server/ChatServer/src/: ChatServer.cpp  ConfigManager.cpp  RpcService.cpp  main.cpp
Server/Common/: RpcConnPool.hpp
Server/Common/include/: RpcService.h  TcpTester.h  net_message.hpp
Server/Common/include/pool/: IoContextPool.h  MysqlConnPool.h  RpcConnPool.hpp
Server/Common/src/: RpcService.cpp
Server/Common/src/DAO/mysql/: MysqlUserDao.cpp
Server/Common/src/pool/: IoContextPool.cpp  MysqlConnPool.cpp  RedisConnPool.cpp
Server/GateServer/: CMakeLists.txt
Server/GateServer/include/: Common.h  ConfigManger.h  HttpConnection.h  Listener.h  LogicSystem.h  MysqlService.h  RpcService.h
Server/GateServer/include/pool/: IoContextPool.h  MysqlConnPool.h  RedisConnPool.h  RpcConnPool.h  RpcConnPool.hpp
Server/GateServer/src/: ConfigManger.cpp  GateServer.cpp  Listener.cpp  LogicSystem.cpp  MysqlService.cpp  RpcService.cpp
Server/GateServer/src/pool/: RedisConnPool.cpp  RpcConnPool.cpp
Server/StatusService/: CMakeLists.txt  StatusServer.cpp  StatusServer.h  server.cpp
Server/VerifyService/: config.js  config.json  email.js  package-lock.json  package.json  redis.js  server.js
Server/include/: ConfigManger.h  EmailVerifyClient.h  HttpConnection.h  IoContextPool.h  Listener.h  LogicSystem.h  MysqlService.h  RedisConnPool.h  Singleton.hpp
Server/include/DAO/: ErrorCode.h  user.h
Server/include/DAO/mysql/: MysqlUserDao.h
Server/include/pool/: IoContextPool.h  MysqlConnPool.h  RedisConnPool.h  RpcConnPool.h
Server/sql/: wechat.sql
Server/src/: ConfigManger.cpp  EmailVerifyClient.cpp  GateServer.cpp  HttpConnection.cpp  IoContextPool.cpp  Listener.cpp  LogicSystem.cpp  MysqlService.cpp  RedisConnPool.cpp
Server/src/DAO/mysql/: MysqlUserDao.cpp
Server/src/pool/: IoContextPool.cpp  MysqlConnPool.cpp  RedisConnPool.cpp  RpcConnPool.cpp
Server/test/: CMakeLists.txt  test_email_service.cpp  test_io_context_pool.cpp  test_mysql_pool.cpp  test_redis_pool.cpp  test_rpc_pool.cpp  test_status_service.cpp  test_user_dao.cpp
include/: RegisterDialog.h  mainwindow.h
src/: LoginDialog.cpp  main.cpp
ui/: RegisterDialog.ui
